<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_white_rd10"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnRateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_blue_rd5"
            android:fontFamily="@font/truculenta"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/rateBtnTxt"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnMoreApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_blue_rd5"
            android:fontFamily="@font/truculenta"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/otherAppsTitle"
            android:textAlignment="center"
            android:textColor="@color/white"

            />

<!--        <TextView-->
<!--            android:id="@+id/btnChangeLanguage"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:background="@drawable/selector_blue_rd5"-->
<!--            android:fontFamily="@font/truculenta"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/jezyk"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/white"-->

<!--            />-->

        <TextView
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/selector_blue_rd5"
            android:fontFamily="@font/truculenta"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/terms_of_use"
            android:textAlignment="center"
            android:textColor="@color/white"

            />

        <TextView
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/selector_blue_rd5"
            android:fontFamily="@font/truculenta"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/shareApp"
            android:textAlignment="center"
            android:textColor="@color/white"

            />


    </LinearLayout>

    <include
        android:id="@+id/viewAdNative"
        layout="@layout/ad_unified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_white_rd10"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/btnCancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:elevation="5dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>